# CDR_ATOM_FACTORY_2019

./: .gitmodules  README.md
Arudino/Move_de_base_Arduino/: Move_de_base_Arduino.ino
Arudino/Move_de_base_Arduino_V2/: Move_de_base_Arduino_V2.ino
Arudino/Move_encodeur/: Move_encodeur.ino
CAO/Base Roulante/SW_BR_1.0/: axe.SLDPRT  goupille.SLDPRT  poulie.SLDPRT  roulement 5x16.SLDPRT
CAO/Base Roulante/SW_BR_2.0/: fixation moteur.SLDPRT  poulie 20 dents.SLDPRT  roues.SLDPRT  support roues.SLDPRT
CAO/Prototype Base Roulante Principale/Prototype V1/: Assemblage Base Prototype Uno.SLDASM  Axe support Encodeurs.SLDPRT  Base support Encodeurs.SLDPRT  Bille_D12.SLDPRT  Codeurs Kuebler D24.SLDPRT  Courroie 55mm.SLDPRT  Ecrou à trou.SLDPRT  Fixation Encodeurs.SLDPRT  Joint Torique Roue folle D60.SLDPRT  Joint torique D60.SLDPRT  Moteur faulhaber D26.SLDPRT  Plaque Base.SLDPRT  Poulie D20 6mm.SLDPRT  Poulie D20.SLDPRT  Poulie D32.SLDPRT  Roue D58.SLDPRT  Roue folle D46.SLDPRT  Roulement a bille D16.SLDPRT  Roulette à bille.SLDPRT  Sol.SLDPRT  Support Moteur .SLDPRT  Support Moteur Symétrie .SLDPRT  Support Poulie U .SLDPRT
Software/Robot_Path/: robot.h
Software/Robot_Path/Robot_Path_Planning/: a_star.cpp  map.cpp  (+21 more)
cdr_gazebo_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
cdr_robot_ws/build_isolated/: catkin_make_isolated.cache
cdr_robot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
cdr_robot_ws/encoder_controller/: CMakeLists.txt  package.xml
cdr_robot_ws/src/sonar_controller/: CMakeLists.txt  package.xml
cdr_robot_ws/test/: package.xml
(+390 files in other folders)
